# taskiq-asyncpg

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: release.yaml  test.yaml
taskiq_asyncpg/: __init__.py  broker.py  queries.py  result_backend.py
taskiq_asyncpg/abc/: serializer.py
taskiq_asyncpg/serializers/: __init__.py  pickle_serializer.py
tests/: conftest.py  test_broker.py  test_result_backend.py
