[project]
name = "taskiq-asyncpg"
version = "0.2.0"
description = "Asyncpg and PostgreSQL integration for taskiq"
authors = [{ name = "Jefferson Venceslau", email = "jeff.venceslau@gmail.com" }]
dependencies = ["taskiq>=0.11.7", "asyncpg>=0.29.0"]
readme = "README.md"
requires-python = ">= 3.9"
packages = [{ include = "taskiq_asyncpg" }]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
homepage = "https://github.com/z22092/taskiq-asyncpg"
repository = "https://github.com/z22092/taskiq-asyncpg"
keywords = [
    "taskiq",
    "tasks",
    "distributed",
    "async",
    "postgresql",
    "result_backend",
    "asyncpg",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
generate-hashes = true
lock-with-sources = true
dev-dependencies = [
    "ruff>=0.6.9",
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
    "pytest-env>=1.1.5",
    "asyncpg-stubs>=0.29.1",
    "pre-commit>=4.0.1",
    "mypy>=1.12.0",
    "pytest-xdist>=3.6.1",
    "flake8>=7.1.1",
    "autoflake>=2.3.1",
    "yesqa>=1.5.0",
    "anyio>=4.6.2.post1",
    "wemake-python-styleguide>=0.19.2",
    "black>=24.10.0",
    "twine>=5.1.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["taskiq_asyncpg"]

[tool.mypy]
strict = true
pretty = true
show_error_codes = true

[tool.ruff.format]
exclude = [".venv/"]

[tool.ruff.lint]
select  = [
    "E",   # Error
    "F",   # Pyflakes
    "W",   # Pycodestyle
    "C90", # McCabe complexity
    "I",   # Isort
    "N",   # pep8-naming
    "D",   # Pydocstyle
    "ANN", # Pytype annotations
    "S",   # Bandit
    "B",   # Bugbear
    "COM", # Commas
    "C4",  # Comprehensions
    "ISC", # Implicit string concat
    "PIE", # Unnecessary code
    "T20", # Catch prints
    "PYI", # validate pyi files
    "Q",   # Checks for quotes
    "RSE", # Checks raise statements
    "RET", # Checks return statements
    "SLF", # Self checks
    "SIM", # Simplificator
    "PTH", # Pathlib checks
    "ERA", # Checks for commented out code
    "PL",  # PyLint checks
    "RUF", # Specific to Ruff checks
]
ignore = [
    "D105",    # Missing docstring in magic method
    "D107",    # Missing docstring in __init__
    "D212",    # Multi-line docstring summary should start at the first line
    "D401",    # First line should be in imperative mood
    "D104",    # Missing docstring in public package
    "D100",    # Missing docstring in public module
    "ANN102",  # Missing type annotation for self in method
    "ANN101",  # Missing type annotation for argument
    "ANN401",  # typing.Any are disallowed in `**kwargs
    "PLR0913", # Too many arguments for function call
    "D106",    # Missing docstring in public nested class
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["taskiq_dependencies.Depends", "taskiq.TaskiqDepends"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S101",   # Use of assert detected
    "S301",   # Use of pickle detected
    "D103",   # Missing docstring in public function
    "SLF001", # Private member accessed
    "S311",   # Standard pseudo-random generators are not suitable for security/cryptographic purposes
    "D101",   # Missing docstring in public class
]
